--- a/templates/add.html
+++ b/templates/add.html
@@ -1,21 +1,249 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>My First Website ever</title>
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 </head>
+
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700;900&display=swap');
+
+    
+    *, body {
+        font-family:monospace, sans-serif;
+        font-weight: 400;
+        -webkit-font-smoothing: antialiased;
+        text-rendering: optimizeLegibility;
+        -moz-osx-font-smoothing: grayscale;
+    }
+
+    html, body {
+        height: 100%;
+        background-color: #000000;
+        overflow: hidden;
+    }
+
+
+    .form-holder {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        min-height: 100vh;
+    }
+
+    .form-holder .form-content {
+        position: relative;
+        text-align: center;
+        display: -webkit-box;
+        display: -moz-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
+        -webkit-justify-content: center;
+        justify-content: center;
+        -webkit-align-items: center;
+        align-items: center;
+        padding: 60px;
+    }
+
+    .form-content .form-items {
+        border: 3px solid #fff;
+        padding: 40px;
+        display: inline-block;
+        width: 100%;
+        min-width: 540px;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        border-radius: 10px;
+        text-align: left;
+        -webkit-transition: all 0.4s ease;
+        transition: all 0.4s ease;
+    }
+
+    .form-content h3 {
+        color: #fff;
+        text-align: left;
+        font-size: 28px;
+        font-weight: 600;
+        margin-bottom: 5px;
+    }
+
+    .form-content h3.form-title {
+        margin-bottom: 30px;
+    }
+
+    .form-content p {
+        color: #fff;
+        text-align: left;
+        font-size: 17px;
+        font-weight: 300;
+        line-height: 20px;
+        margin-bottom: 30px;
+    }
+
+
+    .form-content label, .was-validated .form-check-input:invalid~.form-check-label, .was-validated .form-check-input:valid~.form-check-label{
+        color: #fff;
+    }
+
+    .form-content input[type=text], .form-content input[type=password], .form-content input[type=email], .form-content select {
+        width: 100%;
+        padding: 9px 20px;
+        text-align: left;
+        border: 0;
+        outline: 0;
+        border-radius: 6px;
+        background-color: #fff;
+        font-size: 15px;
+        font-weight: 300;
+        color: #8D8D8D;
+        -webkit-transition: all 0.3s ease;
+        transition: all 0.3s ease;
+        margin-top: 16px;
+    }
+
+
+    .btn-primary{
+        background-color: #6C757D;
+        outline: none;
+        border: 0px;
+        box-shadow: none;
+    }
+
+    .btn-primary:hover, .btn-primary:focus, .btn-primary:active{
+        background-color: #495056;
+        outline: none !important;
+        border: none !important;
+        box-shadow: none;
+    }
+
+    .form-content textarea {
+        position: static !important;
+        width: 100%;
+        padding: 8px 20px;
+        border-radius: 6px;
+        text-align: left;
+        background-color: #fff;
+        border: 0;
+        font-size: 15px;
+        font-weight: 300;
+        color: #8D8D8D;
+        outline: none;
+        resize: none;
+        height: 120px;
+        -webkit-transition: none;
+        transition: none;
+        margin-bottom: 14px;
+    }
+
+    .form-content textarea:hover, .form-content textarea:focus {
+        border: 0;
+        background-color: #ebeff8;
+        color: #000000;
+    }
+
+
+
+</style>
+
+
 <body>
 
-  <h1> Add Activity </h1> 
-    
-  <form action="/add" method = "POST">
-    <input  type = "date" id = "date" name = "date" autofocus placeholder="Date">
-    <input  type = "text" id = "task" name = "task" autofocus placeholder="Task">
-    <input type = "submit" value="Add">
-  </form>
+
+    <div class="form-body">
+        <div class="row">
+            <div class="form-holder">
+                <div class="form-content">
+                    <div class="form-items">
+                        <h3>Add a task</h3>
+                        <p>Fill in the data below.</p>
+                        <form action="/add" method = "POST">
+
+                            <div class="col-md-12">
+                               <input class="form-control" type="date" name="date">
+<!--                                <div class="valid-feedback">Username field is valid!</div> -->
+<!--                                <div class="invalid-feedback">Username field cannot be blank!</div> -->
+                            </div>
+                          <br>
+
+                            <div class="col-md-12">
+                               <textarea class="form-control" id="task" name="task" rows="3" placeholder = "Task"></textarea>
+<!--                                  <div class="valid-feedback">Email field is valid!</div> -->
+<!--                                  <div class="invalid-feedback">Email field cannot be blank!</div> -->
+                            </div>
+                          
+                          <div class="col-md-12">
+                               <input class="form-control" id = "hours" type="number" name="hours" placeholder = "Hours">
+<!--                                <div class="valid-feedback">Username field is valid!</div> -->
+<!--                                <div class="invalid-feedback">Username field cannot be blank!</div> -->
+                            </div>
+
+                           <div class="col-md-12 mt-3">
+                            <label class="mb-3 mr-1" for="category">Category :   </label>
+
+                            <input type="radio" class="btn-check" name="category" id="category_gate" autocomplete="off" value="gate" required>
+                            <label class="btn btn-sm btn-outline-secondary" for="category_gate">GATE</label>
+
+                            <input type="radio" class="btn-check" name="category" id="category_rest" autocomplete="off" value="rest" required>
+                            <label class="btn btn-sm btn-outline-secondary" for="category_rest">Rest</label>
+
+   
+<!--                                <div class="valid-feedback mv-up">You selected a gender!</div> -->
+<!--                                 <div class="invalid-feedback mv-up">Please select a gender!</div> -->
+                            </div>
+                           <div class="col-md-12" >
+                                <select class="form-select mt-3" required name="subject">
+                                      <option selected disabled value="">Subject</option>
+                                      <option value="others">Others (Non - Gate)</option>
+                                      <option value="Maths">Maths</option>
+                                      <option value="tocandcd">TOC and CD</option>
+                                      <option value="os">OS</option>
+                                      <option value="cn">Computer Networks</option>
+                                      <option value="dbms">DBMS</option>
+                                      <option value="dsa">DataStructures and Algorithms</option>
+                                      <option value="cprog">C Programming</option>
+                                      <option value="digital">Digital Logic and Design</option>
+                                      <option value="co">Computer Organization</option>
+                               </select>
+                                <div class="valid-feedback">You selected a position!</div>
+                                <div class="invalid-feedback">Please select a position!</div>
+                           </div>
+
+
+<!--                            <div class="col-md-12">
+                              <input class="form-control" type="password" name="password" placeholder="Password" required>
+                               <div class="valid-feedback">Password field is valid!</div>
+                               <div class="invalid-feedback">Password field cannot be blank!</div>
+                           </div> -->
+
+
+
+<!--                         <div class="form-check">
+                          <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                          <label class="form-check-label">I confirm that all data are correct</label>
+                         <div class="invalid-feedback">Please confirm that the entered data are all correct!</div>
+                        </div> -->
+                  
+
+                            <div class="form-button mt-3">
+                                <button id="submit" type="submit" class="btn btn-primary">Add Task!</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
   <a href="/">Home</a>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 
 </body>
 </html>
