minor font size correction

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,13 +39,15 @@ body {
   h1
   {
     padding-top: 15px;
-    font-size: 80px;
+    font-size: xx-large;
+    /* font-size: 80px; */
     font-family: 'Tourney', cursive;
     font-weight: 600;
   }
 
   body
   {
+    text-align: center;
     color:#ff9900;
     /* background-color:#1F2739; */
   }
@@ -74,7 +76,7 @@ body {
 </style>
 
 
-<body style="text-align: center;">
+<body>
 
   <h1> I-did-this-today </h1> 
   <h6> Created to store and analyse my study patterns </h6>
