minor add html css

--- a/templates/add.html
+++ b/templates/add.html
@@ -55,7 +55,7 @@
         padding: 40px;
         display: inline-block;
         width: 100%;
-        min-width: 540px;
+        min-width:auto;
         -webkit-border-radius: 10px;
         -moz-border-radius: 10px;
         border-radius: 10px;
