--- a/templates/index.html
+++ b/templates/index.html
@@ -50,11 +50,16 @@
     font-weight: 600;
   }
 
+  h5, h4 {
+    color: #ffffff;
+  }
+
   body {
     text-align: center;
     color: #ff9900;
     /* background-color:#1F2739; */
   }
+
 
   table {
     /* border-spacing: 1;  */
@@ -87,8 +92,11 @@
   <br>
   <br>
 
+  <h4>Welcome, {{user}}</h4>
 
   <a class="btn btn-outline-warning" href="/add" role="button">Add a Task</a>
+  <a class="btn btn-outline-warning" href="/logout" role="button">Logout</a>
+
   <!-- <button type="button"  class="btn btn-outline-primary">Primary</button> -->
   <!-- ="/add"  -->
 
@@ -98,37 +106,48 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <table class="table table-hover table-dark">
-          <thead>
-            <tr>
-              <th scope="col">Date</th>
-              <th scope="col">Category</th>
-              <th scope="col">Subject</th>
-              <th scope="col">Task</th>
-              <th scope="col">Hour(s)</th>
-              <th scope="col">Delete Task</th>
-            </tr>
-          </thead>
-          <tbody>
+        {% if rows %}
+          <table class="table table-hover table-dark">
+            <thead>
+              <tr>
+                <th scope="col">Date</th>
+                <th scope="col">Category</th>
+                <th scope="col">Subject</th>
+                <th scope="col">Task</th>
+                <th scope="col">Hour(s)</th>
+                <th scope="col">Delete Task</th>
+              </tr>
+            </thead>
+            <tbody>
 
-            {% for item in rows %}
-            <tr>
-              <th scope="row"> {{ item[2] }} </th>
-              <td>{{ item[4] }}</td>
-              <td>{{ item[6] }}</td>
-              <td>{{ item[3] }}</td>
-              <td>{{ item[5] }}</td>
-              <td>
-                <!-- <a class="btn btn-outline-warning" href="/add" role="button">Add a Task</a> -->
-                <form action="/" method="POST">
-                  <input type="text" hidden name="id" value={{ item[0] }}>
-                  <input class="btn btn-warning" type="submit" value="Delete Task">
-                </form>
-              </td>
-            </tr>
-            {% endfor %}
-          </tbody>
-        </table>
+
+              {% for item in rows %}
+              <tr>
+                <th scope="row"> {{ item[2] }} </th>
+                <td>{{ item[4] }}</td>
+                <td>{{ item[6] }}</td>
+                <td>{{ item[3] }}</td>
+                <td>{{ item[5] }}</td>
+                <td>
+                  <!-- <a class="btn btn-outline-warning" href="/add" role="button">Add a Task</a> -->
+                  <form action="/" method="POST">
+                    <input type="text" hidden name="id" value={{ item[0] }}>
+                    <input class="btn btn-warning" type="submit" value="Delete Task">
+                  </form>
+                </td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        {% else %}
+          <br>
+          <br>
+          <br>
+          <div class="text-center">
+            <img src="static/empty.jpg" class="rounded" alt="Nothing to look at here">
+          </div>
+          <h5>No tasks to display yet</h5>
+        {% endif %}
       </div>
     </div>
   </div>
@@ -139,31 +158,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
     crossorigin="anonymous"></script>
-    
-  <script>
-    // Import the functions you need from the SDKs you need
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.0.1/firebase-app.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.0.1/firebase-analytics.js";
-    // TODO: Add SDKs for Firebase products that you want to use
-    // https://firebase.google.com/docs/web/setup#available-libraries
-
-    // Your web app's Firebase configuration
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    const firebaseConfig = {
-      apiKey: "AIzaSyBZv4x1rzkueJM5uNmeqKNEIBxgHahlI5U",
-      authDomain: "i-did-this-today.firebaseapp.com",
-      projectId: "i-did-this-today",
-      storageBucket: "i-did-this-today.appspot.com",
-      messagingSenderId: "572180625499",
-      appId: "1:572180625499:web:a93de145bc191b122c677e",
-      measurementId: "G-PTPWMJ0LVF"
-    };
-
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const analytics = getAnalytics(app);
-  </script>
-
 
 </body>
 
