--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
+  <script src="../static/js/chart.js"></script>
+
+
 </head>
 
 <style>
@@ -50,7 +53,8 @@
     font-weight: 600;
   }
 
-  h5, h4 {
+  h5,
+  h4 {
     color: #ffffff;
   }
 
@@ -87,14 +91,111 @@
 <body>
 
   <h1> I-did-this-today </h1>
-  <h6> Created to store and analyse my study patterns </h6>
+  <h6> Visualize your productivity / procrastination levels.</h6>
 
   <br>
   <br>
+
+  <!-- <div class="container">
+    <div class="row">
+
+      <div class="col-md-5">
+        <canvas id="productivity" ></canvas>
+
+      </div>
+      <div class="col-md-5">
+        <canvas id="procrastination" ></canvas>
+
+      </div>
+   
+    
+    
+    </div>
+  </div> -->
+
+  <script>
+    var ctx = document.getElementById('productivity').getContext('2d');
+    var myChart = new Chart(ctx, {
+      type: 'line',
+      data: {
+        labels: ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'],
+        datasets: [{
+          label: '# of hours of productivity',
+          data: [12, 7, 3, 5, 2, 3, 100],
+          backgroundColor: [
+            'rgba(255, 99, 132, 0.2)',
+            'rgba(54, 162, 235, 0.2)',
+            'rgba(255, 206, 86, 0.2)',
+            'rgba(75, 192, 192, 0.2)',
+            'rgba(153, 102, 255, 0.2)',
+            'rgba(255, 159, 64, 0.2)'
+          ],
+          borderColor: [
+            'rgba(255, 99, 132, 1)',
+            'rgba(54, 162, 235, 1)',
+            'rgba(255, 206, 86, 1)',
+            'rgba(75, 192, 192, 1)',
+            'rgba(153, 102, 255, 1)',
+            'rgba(255, 159, 64, 1)'
+          ],
+          borderWidth: 1
+        }]
+      },
+      options: {
+        scales: {
+          y: {
+            beginAtZero: true
+          }
+        }
+      }
+    });
+  </script>
+
+
+<script>
+  var ctp = document.getElementById('procrastination').getContext('2d');
+  var myChart = new Chart(ctp, {
+    type: 'line',
+    data: {
+      labels: ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'],
+      datasets: [{
+        label: '# of hours of procrastination',
+        data: [1, 3, 2, 4, 7, 3, 7],
+        backgroundColor: [
+          'rgba(255, 99, 132, 0.2)',
+          'rgba(54, 162, 235, 0.2)',
+          'rgba(255, 206, 86, 0.2)',
+          'rgba(75, 192, 192, 0.2)',
+          'rgba(153, 102, 255, 0.2)',
+          'rgba(255, 159, 64, 0.2)'
+        ],
+        borderColor: [
+          'rgba(255, 99, 132, 1)',
+          'rgba(54, 162, 235, 1)',
+          'rgba(255, 206, 86, 1)',
+          'rgba(75, 192, 192, 1)',
+          'rgba(153, 102, 255, 1)',
+          'rgba(255, 159, 64, 1)'
+        ],
+        borderWidth: 1
+      }]
+    },
+    options: {
+      scales: {
+        y: {
+          beginAtZero: true
+        }
+      }
+    }
+  });
+</script>
+
+  
+
 
   <h4>Welcome, {{user}}</h4>
 
-  <a class="btn btn-outline-warning" href="/add" role="button">Add a Task</a>
+  <a class="btn btn-outline-warning" href="/add" role="button">Add an Activity</a>
   <a class="btn btn-outline-warning" href="/logout" role="button">Logout</a>
 
   <!-- <button type="button"  class="btn btn-outline-primary">Primary</button> -->
@@ -107,46 +208,45 @@
     <div class="row">
       <div class="col">
         {% if rows %}
-          <table class="table table-hover table-dark">
-            <thead>
-              <tr>
-                <th scope="col">Date</th>
-                <th scope="col">Category</th>
-                <th scope="col">Subject</th>
-                <th scope="col">Task</th>
-                <th scope="col">Hour(s)</th>
-                <th scope="col">Delete Task</th>
-              </tr>
-            </thead>
-            <tbody>
+        <table class="table table-hover table-dark">
+          <thead>
+            <tr>
+              <th scope="col">Date</th>
+              <th scope="col">Category</th>
+              <th scope="col">Task</th>
+              <th scope="col">Hour(s)</th>
+              <th scope="col">Delete Task</th>
+            </tr>
+          </thead>
+          <tbody>
 
 
-              {% for item in rows %}
-              <tr>
-                <th scope="row"> {{ item[2] }} </th>
-                <td>{{ item[4] }}</td>
-                <td>{{ item[6] }}</td>
-                <td>{{ item[3] }}</td>
-                <td>{{ item[5] }}</td>
-                <td>
-                  <!-- <a class="btn btn-outline-warning" href="/add" role="button">Add a Task</a> -->
-                  <form action="/" method="POST">
-                    <input type="text" hidden name="id" value={{ item[0] }}>
-                    <input class="btn btn-warning" type="submit" value="Delete Task">
-                  </form>
-                </td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
+            {% for item in rows %}
+            <tr>
+              <th scope="row"> {{ item[2] }} </th>
+              <td>{{ item[4] }}</td>
+              <!-- <td>{{ item[6] }}</td> -->
+              <td>{{ item[3] }}</td>
+              <td>{{ item[5] }}</td>
+              <td>
+                <!-- <a class="btn btn-outline-warning" href="/add" role="button">Add a Task</a> -->
+                <form action="/" method="POST">
+                  <input type="text" hidden name="id" value={{ item[0] }}>
+                  <input class="btn btn-warning" type="submit" value="Delete Activity">
+                </form>
+              </td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
         {% else %}
-          <br>
-          <br>
-          <br>
-          <div class="text-center">
-            <img src="static/empty.jpg" class="rounded" alt="Nothing to look at here">
-          </div>
-          <h5>No tasks to display yet</h5>
+        <br>
+        <br>
+        <br>
+        <div class="text-center">
+          <img src="static/empty.jpg" class="rounded" alt="Nothing to look at here">
+        </div>
+        <h5>No tasks to display yet</h5>
         {% endif %}
       </div>
     </div>
